[gd_scene load_steps=29 format=3 uid="uid://dteuoxb4pn1vg"]

[ext_resource type="Script" path="res://Scenes/Cats/Cat_S/cat_s.gd" id="1_clklt"]
[ext_resource type="Texture2D" uid="uid://b7ttvglfbs3ja" path="res://Sprites/Cats/Cat_S/Classic/Cat_S_blinks.png" id="2_441ly"]
[ext_resource type="Texture2D" uid="uid://c3tid1hreexg0" path="res://Sprites/Cats/Cat_S/Classic/Cat_S.png" id="2_hbhdv"]
[ext_resource type="Texture2D" uid="uid://bw1v5uqomtuca" path="res://Sprites/Cats/Cat_S/Classic/Cat_S_0.png" id="3_4iv1k"]
[ext_resource type="Texture2D" uid="uid://jftcffwuuqub" path="res://Sprites/Cats/Cat_S/Classic/Cat_S_meow.png" id="4_dm1or"]
[ext_resource type="Texture2D" uid="uid://dbw8uwiktpkbi" path="res://Sprites/Cats/Cat_S/Classic/Cat_S_1_5.png" id="4_nbi5h"]
[ext_resource type="Texture2D" uid="uid://kcqpvmrh751v" path="res://Sprites/Cats/Cat_S/Classic/Cat_S_2_4.png" id="5_glbc8"]
[ext_resource type="Texture2D" uid="uid://ca7sgsi4lpy4w" path="res://Sprites/Cats/Cat_S/Classic/Cat_S_3.png" id="6_dq7l0"]
[ext_resource type="Script" path="res://Scenes/Cats/Ð¡at_o/skeleton_cat.gd" id="7_g7qyv"]
[ext_resource type="Script" path="res://addons/random_timer/random_timer.gd" id="8_1c8v6"]
[ext_resource type="AudioStream" uid="uid://cg5wq1d1d6jr3" path="res://Sounds/Cats/Rotate_cat.mp3" id="11_bxjr2"]
[ext_resource type="AudioStream" uid="uid://b7ck42t2qc5u7" path="res://Sounds/Cats/Drag/Drag_cat.mp3" id="12_7s2dd"]
[ext_resource type="AudioStream" uid="uid://cstrunhb2f405" path="res://Sounds/Cats/Drag/Drag_cat_2.mp3" id="13_fu0c5"]
[ext_resource type="AudioStream" uid="uid://by6453j5c6t7h" path="res://Sounds/Cats/Meows/Cats/meow_0.mp3" id="14_y8bjr"]
[ext_resource type="AudioStream" uid="uid://i70hdb8dbc0" path="res://Sounds/Cats/Meows/Cats/meow_1.mp3" id="15_5xr6j"]
[ext_resource type="AudioStream" uid="uid://cer8128a1u61x" path="res://Sounds/Cats/Meows/Cats/meow_2.mp3" id="16_v80ie"]
[ext_resource type="AudioStream" uid="uid://byn2q6k7mdpmk" path="res://Sounds/Cats/Meows/Cats/meow_3.mp3" id="17_0f12r"]
[ext_resource type="AudioStream" uid="uid://dqyyj77l0p86j" path="res://Sounds/Cats/Meows/Cats/meow_4.mp3" id="18_c02od"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cax7s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_441ly")
}, {
"duration": 1.0,
"texture": ExtResource("2_hbhdv")
}],
"loop": false,
"name": &"blinks_classic",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hbhdv")
}],
"loop": false,
"name": &"idle_classic",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_dm1or")
}, {
"duration": 1.0,
"texture": ExtResource("4_dm1or")
}, {
"duration": 1.0,
"texture": ExtResource("4_dm1or")
}, {
"duration": 1.0,
"texture": ExtResource("4_dm1or")
}, {
"duration": 1.0,
"texture": ExtResource("2_hbhdv")
}],
"loop": false,
"name": &"meow_classic",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_3m50j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_4iv1k")
}, {
"duration": 1.0,
"texture": ExtResource("4_nbi5h")
}, {
"duration": 1.0,
"texture": ExtResource("5_glbc8")
}, {
"duration": 1.0,
"texture": ExtResource("6_dq7l0")
}, {
"duration": 1.0,
"texture": ExtResource("5_glbc8")
}, {
"duration": 1.0,
"texture": ExtResource("4_nbi5h")
}, {
"duration": 1.0,
"texture": ExtResource("4_nbi5h")
}, {
"duration": 1.0,
"texture": ExtResource("4_nbi5h")
}, {
"duration": 1.0,
"texture": ExtResource("4_nbi5h")
}],
"loop": true,
"name": &"Cat_S_move_Classic",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3xiyr"]
size = Vector2(93, 79.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2doda"]
size = Vector2(82, 168)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7c3ty"]
size = Vector2(92, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mv71"]
size = Vector2(87, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_30jqt"]
size = Vector2(10, 97)

[sub_resource type="Animation" id="Animation_bh8eh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite_Cat_S:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}

[sub_resource type="Animation" id="Animation_t3ijd"]
resource_name = "scale"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite_Cat_S:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.55, 0.55), Vector2(0.48, 0.48), Vector2(0.5, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jcjxi"]
_data = {
"RESET": SubResource("Animation_bh8eh"),
"scale": SubResource("Animation_t3ijd")
}

[node name="Cat_S" type="CharacterBody2D"]
script = ExtResource("1_clklt")

[node name="Sprite_Cat_S" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(44, 0)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_cax7s")
animation = &"idle_classic"

[node name="Cat_S_animation" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(40, 30)
scale = Vector2(0.9, 0.9)
sprite_frames = SubResource("SpriteFrames_3m50j")
animation = &"Cat_S_move_Classic"

[node name="Color_tiles" type="ColorRect" parent="."]
unique_name_in_owner = true
show_behind_parent = true
custom_minimum_size = Vector2(98, 88)
offset_left = 89.0
offset_top = -80.0007
offset_right = 187.0
offset_bottom = 7.99981
scale = Vector2(0.9, 0.9)
color = Color(0.0705882, 0.0705882, 0.0705882, 0.129412)
metadata/_edit_use_anchors_ = true

[node name="ColorRect3" type="ColorRect" parent="Color_tiles"]
show_behind_parent = true
custom_minimum_size = Vector2(88, 88)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00786918
anchor_top = 0.00251127
anchor_right = 0.0286951
anchor_bottom = 0.00251127
offset_left = -186.667
offset_top = 87.7788
offset_right = -90.6663
offset_bottom = 175.779
color = Color(0.0705882, 0.0705882, 0.0705882, 0.129412)
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="Color_tiles"]
show_behind_parent = true
custom_minimum_size = Vector2(176, 88)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0113357
anchor_right = 0.0113357
offset_left = -1.11121
offset_right = 174.889
offset_bottom = 88.0005
rotation = 1.5708
color = Color(0.0705882, 0.0705882, 0.0705882, 0.129412)
metadata/_edit_use_anchors_ = true

[node name="Collision_touch2" type="CollisionShape2D" parent="."]
position = Vector2(127.5, -44.25)
shape = SubResource("RectangleShape2D_3xiyr")
debug_color = Color(0.652468, 0.507776, 0.299182, 0.42)

[node name="Collision_touch" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(46, 0)
shape = SubResource("RectangleShape2D_2doda")
debug_color = Color(0.652468, 0.507776, 0.299182, 0.42)

[node name="Collision_touch3" type="CollisionShape2D" parent="."]
position = Vector2(-39, 44)
shape = SubResource("RectangleShape2D_7c3ty")
debug_color = Color(0.652468, 0.507776, 0.299182, 0.42)

[node name="Skeleton_cat" type="CharacterBody2D" parent="."]
position = Vector2(44, -44)
collision_layer = 4
collision_mask = 2
script = ExtResource("7_g7qyv")

[node name="Collision_SH" type="CollisionShape2D" parent="Skeleton_cat"]
position = Vector2(48.5, 1)
shape = SubResource("RectangleShape2D_3mv71")

[node name="Collision_LL" type="CollisionShape2D" parent="Skeleton_cat"]
position = Vector2(0, 42.5)
shape = SubResource("RectangleShape2D_30jqt")

[node name="Collision_SH2" type="CollisionShape2D" parent="Skeleton_cat"]
position = Vector2(-48, 84)
shape = SubResource("RectangleShape2D_3mv71")

[node name="RandomTimer_blinks" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
script = ExtResource("8_1c8v6")
min_wait_time = 5.0
max_wait_time = 12.0

[node name="RandomTimer_meow" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true
script = ExtResource("8_1c8v6")
min_wait_time = 30.0
max_wait_time = 90.0

[node name="Animation_in_field" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_jcjxi")
}

[node name="Sounds" type="Node" parent="."]

[node name="Sound_rotate" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("11_bxjr2")
bus = &"Sounds"

[node name="Sound_drag" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("12_7s2dd")
volume_db = -15.0
bus = &"Sounds"

[node name="Sound_drag_2" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("13_fu0c5")
volume_db = -20.0
bus = &"Sounds"

[node name="meows_sounds" type="Node" parent="Sounds"]
unique_name_in_owner = true

[node name="Sound_meow_0" type="AudioStreamPlayer" parent="Sounds/meows_sounds"]
stream = ExtResource("14_y8bjr")
volume_db = -15.0
bus = &"Sounds"

[node name="Sound_meow_1" type="AudioStreamPlayer" parent="Sounds/meows_sounds"]
stream = ExtResource("15_5xr6j")
volume_db = -15.0
bus = &"Sounds"

[node name="Sound_meow_2" type="AudioStreamPlayer" parent="Sounds/meows_sounds"]
stream = ExtResource("16_v80ie")
volume_db = -15.0
bus = &"Sounds"

[node name="Sound_meow_3" type="AudioStreamPlayer" parent="Sounds/meows_sounds"]
stream = ExtResource("17_0f12r")
volume_db = -15.0
bus = &"Sounds"

[node name="Sound_meow_4" type="AudioStreamPlayer" parent="Sounds/meows_sounds"]
stream = ExtResource("18_c02od")
volume_db = -15.0
bus = &"Sounds"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="RandomTimer_blinks" to="." method="_on_random_timer_blinks_timeout"]
[connection signal="timeout" from="RandomTimer_meow" to="." method="_on_random_timer_meow_timeout"]
